--- a/src/app/modules/full-layout/modules/account/pages/account-page/account-page.page.html
+++ b/src/app/modules/full-layout/modules/account/pages/account-page/account-page.page.html
@@ -1,5 +1,5 @@
 <div class="header-spacer header-spacer-small"></div>
 
 <app-account-header></app-account-header>
-<app-account-sidebar></app-account-sidebar>
+<app-account-sidebar-page></app-account-sidebar-page>
 <router-outlet></router-outlet>
