--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
 			<img src="/assets/img/logo.png" alt="YelloPlane">
 		</a>
 
-		<div class="mCustomScrollbar" data-mcs-theme="dark">
+		<perfect-scrollbar>
 			<ul class="left-menu">
 				<li>
 					<a href clickStopPropagation class="js-sidebar-open" placement="auto" ngbTooltip="OPEN MENU">
@@ -59,7 +59,7 @@
 					</a>
 				</li>
 			</ul>
-		</div>
+		</perfect-scrollbar>
 	</div>
 
 	<div class="fixed-sidebar-left sidebar--large" id="sidebar-left-1">
@@ -68,7 +68,7 @@
 			<h6 class="logo-title">yelloplane</h6>
 		</a>
 
-		<div class="mCustomScrollbar" data-mcs-theme="dark">
+		<perfect-scrollbar>
 			<ul class="left-menu">
 				<li>
 					<a href clickStopPropagation class="js-sidebar-open">
@@ -132,7 +132,7 @@
 				</li>
 			</ul>
 
-		</div>
+		</perfect-scrollbar>
 	</div>
 </div>
 
@@ -155,7 +155,7 @@
 			<h6 class="logo-title">yelloplane</h6>
 		</a>
 
-		<div class="mCustomScrollbar" data-mcs-theme="dark">
+		<perfect-scrollbar>
 			<ul class="left-menu">
 				<li>
 					<a href clickStopPropagation class="js-sidebar-open">
@@ -218,7 +218,7 @@
 					</a>
 				</li>
 			</ul>
-		</div>
+		</perfect-scrollbar>
 	</div>
 </div>
 
