--- a/src/scss/blocks/_your-profile.scss
+++ b/src/scss/blocks/_your-profile.scss
@@ -67,7 +67,7 @@
 	visibility: hidden;
 	z-index: -4444;
   }
-  .mCustomScrollbar {
+  perfect-scrollbar {
 	max-height: calc(100vh - 70px);
   }
 }
