--- a/src/app/modules/full-layout/components/full-layout/full-layout.component.html
+++ b/src/app/modules/full-layout/components/full-layout/full-layout.component.html
@@ -1,4 +1,5 @@
 <app-sidebar></app-sidebar>
+<app-chat-sidebar></app-chat-sidebar>
 <app-header [username]="user.name"></app-header>
 
 <router-outlet></router-outlet>
