--- a/src/app/modules/full-layout/modules/account/pages/account-personal-info/account-personal-info.page.html
+++ b/src/app/modules/full-layout/modules/account/pages/account-personal-info/account-personal-info.page.html
@@ -131,66 +131,12 @@
 			</div>
 		</div>
 
-		<!-- Account Settings Sidebar -->
+		<!-- Account Profile Sidebar -->
 		<div class="col-xl-3 order-xl-1 col-lg-3 order-lg-1 col-md-12 order-md-2 col-sm-12 col-xs-12 responsive-display-none">
-				<div class="ui-block">
-					<div class="your-profile">
-						<div class="ui-block-title ui-block-title-small">
-							<h6 class="title">Your PROFILE</h6>
-						</div>
-			
-						<div id="accordion" role="tablist" aria-multiselectable="true">
-							<div class="card">
-								<div class="card-header" role="tab" id="headingOne">
-									<h6 class="mb-0">
-										<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-											Profile Settings
-											<svg class="olymp-dropdown-arrow-icon"><use xlink:href="/assets/icons/icons.svg#olymp-dropdown-arrow-icon"></use></svg>
-										</a>
-									</h6>
-								</div>
-			
-								<div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
-									<ul class="your-profile-menu">
-										<li>
-											<a [routerLink]="['/account']">Personal Information</a>
-										</li>
-										<li>
-											<a href="#">Account Settings</a>
-										</li>
-										<li>
-											<a href="#">Change Password</a>
-										</li>
-										<li>
-											<a href="#">Hobbies and Interests</a>
-										</li>
-										<li>
-											<a href="#">Education and Employement</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-			
-						<div class="ui-block-title">
-							<a href="#" class="h6 title">Notifications</a>
-							<a href="#" class="items-round-little bg-primary">8</a>
-						</div>
-						<div class="ui-block-title">
-							<a href="#" class="h6 title">Chat / Messages</a>
-						</div>
-						<div class="ui-block-title">
-							<a href="#" class="h6 title">Friend Requests</a>
-							<a href="#" class="items-round-little bg-blue">4</a>
-						</div>
-						<div class="ui-block-title">
-							<a href="#" class="h6 title">Delete Account</a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!-- ... end Account Settings Sidebar -->
+			<app-account-sidebar-large></app-account-sidebar-large>
+		</div>
+		
+		<!-- ... end Account Profile Sidebar -->
 			
 	</div>
 </div>
