--- a/src/scss/blocks/_fixed-sidebar.scss
+++ b/src/scss/blocks/_fixed-sidebar.scss
@@ -40,7 +40,7 @@
 	 }
    }
 
-  .mCustomScrollbar {
+	perfect-scrollbar {
 	max-height: calc(100vh - 70px);
 	overflow-x: hidden;
 	overflow-y: hidden;
@@ -88,7 +88,7 @@
 	right: 0;
 	min-height: 100%;
 
-	.mCustomScrollbar {
+	perfect-scrollbar {
 	  max-height: calc(100vh - 210px);
 	}
   }
@@ -303,13 +303,14 @@
 	display: inline-block;
 	fill: #c2c5d9;
 	padding: 0;
+	margin-left: 20px;
 
 	&:hover {
 	  fill: #9a9fbf;
 	}
 
-	& + li {
-	  margin-left: 20px;
+	&:first-child {
+	  margin-left: 0;
 	}
   }
 
@@ -342,7 +343,6 @@
   bottom: 70px;
   left: 0;
   width: 100%;
-  box-shadow: 0px -50px 45px -3px rgba(255,255,255,.7);
   padding: 25px;
   background-color: $white-color;
 
@@ -417,7 +417,7 @@
 	border-left: none;
   }
 
-  .fixed-sidebar .mCustomScrollbar {
+  .fixed-sidebar perfect-scrollbar {
 	max-height: calc(100vh - 70px);
   }
 
