--- a/src/app/shared/components/chat-sidebar/chat-sidebar.component.html
+++ b/src/app/shared/components/chat-sidebar/chat-sidebar.component.html
@@ -153,7 +153,7 @@
 
 		<a [routerLink]="['/account/profile/messages']" class="olympus-chat inline-items">
 
-			<h6 class="olympus-chat-title">OLYMPUS CHAT</h6>
+			<h6 class="olympus-chat-title">YELLOPLANE CHAT</h6>
 			<svg class="olymp-chat---messages-icon"><use xlink:href="/assets/icons/icons.svg#olymp-chat---messages-icon"></use></svg>
 		</a>
 
