--- a/src/app/modules/full-layout/modules/account/components/account-sidebar-page-large/account-sidebar-page-large.component.html
+++ b/src/app/modules/full-layout/modules/account/components/account-sidebar-page-large/account-sidebar-page-large.component.html
@@ -24,10 +24,10 @@
                 <a [routerLink]="['/account/page/settings']">Account Settings</a>
               </li>
               <li>
-                <a href="#">Change Password</a>
+                <a [routerLink]="['/account/page/passwordchange']">Change Password</a>
               </li>
               <li>
-                <a href="#">Ads Manager</a>
+                <a [routerLink]="['/account/page/ad-manager']">Ads Manager</a>
               </li>
             </ul>
           </div>
@@ -35,8 +35,8 @@
       </div>
 
       <div class="ui-block-title">
-        <a href="#" class="h6 title">Notifications</a>
-        <a href="#" class="items-round-little bg-primary">8</a>
+        <a [routerLink]="['/account/page/notifications']" class="h6 title">Notifications</a>
+        <a [routerLink]="['/account/page/notifications']" class="items-round-little bg-primary">8</a>
       </div>
       <div class="ui-block-title">
         <a [routerLink]="['/account/page/messages']" class="h6 title">Chat / Messages</a>
