--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -233,7 +233,116 @@
 
 			<div class="control-icon more has-items">
 				<svg class="olymp-thunder-icon"><use xlink:href="/assets/icons/icons.svg#olymp-thunder-icon"></use></svg>
-				<div class="label-avatar bg-primary">0</div>
+				<div class="label-avatar bg-primary">5</div>
+
+				<div class="more-dropdown more-with-triangle triangle-top-center">
+					<div class="ui-block-title ui-block-title-small">
+						<h6 class="title">Notifications</h6>
+						<a href="#">Mark all as read</a>
+						<a href="#">Settings</a>
+					</div>
+
+					<perfect-scrollbar>
+						<ul class="notification-list">
+							<li>
+								<div class="author-thumb">
+									<img src="/assets/img/avatar62-sm.jpg" alt="author">
+								</div>
+								<div class="notification-event">
+									<div><a href="#" class="h6 notification-friend">Mahira Khan</a> commented on your new <a href="#" class="notification-link">profile status</a>.</div>
+									<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">4 hours ago</time></span>
+								</div>
+									<span class="notification-icon">
+										<svg class="olymp-comments-post-icon"><use xlink:href="/assets/icons/icons.svg#olymp-comments-post-icon"></use></svg>
+									</span>
+
+								<div class="more">
+									<svg class="olymp-three-dots-icon"><use xlink:href="/assets/icons/icons.svg#olymp-three-dots-icon"></use></svg>
+									<svg class="olymp-little-delete"><use xlink:href="/assets/icons/icons.svg#olymp-little-delete"></use></svg>
+								</div>
+							</li>
+
+							<li class="un-read">
+								<div class="author-thumb">
+									<img src="/assets/img/avatar63-sm.jpg" alt="author">
+								</div>
+								<div class="notification-event">
+									<div>You and <a href="#" class="h6 notification-friend">Jahanzaib Ahmad</a> just became friends. Write on <a href="#" class="notification-link">his wall</a>.</div>
+									<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">9 hours ago</time></span>
+								</div>
+									<span class="notification-icon">
+										<svg class="olymp-happy-face-icon"><use xlink:href="/assets/icons/icons.svg#olymp-happy-face-icon"></use></svg>
+									</span>
+
+								<div class="more">
+									<svg class="olymp-three-dots-icon"><use xlink:href="/assets/icons/icons.svg#olymp-three-dots-icon"></use></svg>
+									<svg class="olymp-little-delete"><use xlink:href="/assets/icons/icons.svg#olymp-little-delete"></use></svg>
+								</div>
+							</li>
+
+							<li class="with-comment-photo">
+								<div class="author-thumb">
+									<img src="/assets/img/avatar64-sm.jpg" alt="author">
+								</div>
+								<div class="notification-event">
+									<div><a href="#" class="h6 notification-friend">Huma Khan</a> commented on your <a href="#" class="notification-link">photo</a>.</div>
+									<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">Yesterday at 5:32am</time></span>
+								</div>
+									<span class="notification-icon">
+										<svg class="olymp-comments-post-icon"><use xlink:href="/assets/icons/icons.svg#olymp-comments-post-icon"></use></svg>
+									</span>
+
+								<div class="comment-photo">
+									<img src="/assets/img/comment-photo1.jpg" alt="photo">
+									<span>“She looks incredible in that outfit! We should see each...”</span>
+								</div>
+
+								<div class="more">
+									<svg class="olymp-three-dots-icon"><use xlink:href="/assets/icons/icons.svg#olymp-three-dots-icon"></use></svg>
+									<svg class="olymp-little-delete"><use xlink:href="/assets/icons/icons.svg#olymp-little-delete"></use></svg>
+								</div>
+							</li>
+
+							<li>
+								<div class="author-thumb">
+									<img src="/assets/img/avatar65-sm.jpg" alt="author">
+								</div>
+								<div class="notification-event">
+									<div><a href="#" class="h6 notification-friend">Rock Band</a> invited you to attend to his event Goo in <a href="#" class="notification-link">Gotham Bar</a>.</div>
+									<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">March 5th at 6:43pm</time></span>
+								</div>
+									<span class="notification-icon">
+										<svg class="olymp-happy-face-icon"><use xlink:href="/assets/icons/icons.svg#olymp-happy-face-icon"></use></svg>
+									</span>
+
+								<div class="more">
+									<svg class="olymp-three-dots-icon"><use xlink:href="/assets/icons/icons.svg#olymp-three-dots-icon"></use></svg>
+									<svg class="olymp-little-delete"><use xlink:href="/assets/icons/icons.svg#olymp-little-delete"></use></svg>
+								</div>
+							</li>
+
+							<li>
+								<div class="author-thumb">
+									<img src="/assets/img/avatar66-sm.jpg" alt="author">
+								</div>
+								<div class="notification-event">
+									<div><a href="#" class="h6 notification-friend">Ahmad Nouman</a> commented on your new <a href="#" class="notification-link">profile status</a>.</div>
+									<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">March 2nd at 8:29pm</time></span>
+								</div>
+									<span class="notification-icon">
+										<svg class="olymp-heart-icon"><use xlink:href="/assets/icons/icons.svg#olymp-heart-icon"></use></svg>
+									</span>
+
+								<div class="more">
+									<svg class="olymp-three-dots-icon"><use xlink:href="/assets/icons/icons.svg#olymp-three-dots-icon"></use></svg>
+									<svg class="olymp-little-delete"><use xlink:href="/assets/icons/icons.svg#olymp-little-delete"></use></svg>
+								</div>
+							</li>
+						</ul>
+					</perfect-scrollbar>
+
+					<a [routerLink]="['/account/profile/notifications']" class="view-all bg-primary">View All Notifications</a>
+				</div>
 			</div>
 
 			<div class="author-page author vcard inline-items more">
@@ -381,8 +490,14 @@
 	<div class="header-content-wrapper">
 		<ul class="nav nav-tabs mobile-app-tabs" role="tablist">
 
+			<!-- <li class="nav-item">
+				<a class="nav-link hidden-tab" data-toggle="tab" role="tab">
+					abc
+				</a>
+			</li> -->
+
 			<li class="nav-item">
-				<a class="nav-link mobile-tab" data-toggle="tab" href="#request" role="tab" (click)="selectTab('request')">
+				<a class="nav-link mobile-tab" data-toggle="tab" data-target="#request" role="tab" (click)="selectTab('request')">
 					<div class="control-icon has-items">
 						<svg class="olymp-happy-face-icon"><use xlink:href="/assets/icons/icons.svg#olymp-happy-face-icon"></use></svg>
 						<div class="label-avatar bg-blue">4</div>
@@ -400,10 +515,10 @@
 			</li>
 
 			<li class="nav-item">
-				<a class="nav-link collapsed" data-toggle="collapse" data-target="#notification" aria-expanded="false">
+				<a class="nav-link" data-toggle="tab" href="#notification" (click)="selectTab('notification')">
 					<div class="control-icon has-items">
 						<svg class="olymp-thunder-icon"><use xlink:href="/assets/icons/icons.svg#olymp-thunder-icon"></use></svg>
-						<div class="label-avatar bg-primary">0</div>
+						<div class="label-avatar bg-primary">5</div>
 					</div>
 				</a>
 			</li>
@@ -618,6 +733,117 @@
 				</ul>
 
 				<a [routerLink]="['/account/profile/messages']" class="view-all bg-purple">View All Messages</a>
+			</div>
+
+		</div>
+
+		<div class="tab-pane " id="notification" role="tabpanel" [ngClass]="{'active': selectedTab === 'notification'}">
+
+			<div class="mCustomScrollbar" data-mcs-theme="dark">
+				<div class="ui-block-title ui-block-title-small">
+					<h6 class="title">Notifications</h6>
+					<a href="#">Mark all as read</a>
+					<a href="#">Settings</a>
+				</div>
+
+				<ul class="notification-list">
+					<li>
+						<div class="author-thumb">
+							<img src="/assets/img/avatar62-sm.jpg" alt="author">
+						</div>
+						<div class="notification-event">
+							<div><a href="#" class="h6 notification-friend">Mahira khan</a> commented on your new <a href="#" class="notification-link">profile status</a>.</div>
+							<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">4 hours ago</time></span>
+						</div>
+										<span class="notification-icon">
+											<svg class="olymp-comments-post-icon"><use xlink:href="/assets/icons/icons.svg#olymp-comments-post-icon"></use></svg>
+										</span>
+
+						<div class="more">
+							<svg class="olymp-three-dots-icon"><use xlink:href="/assets/icons/icons.svg#olymp-three-dots-icon"></use></svg>
+							<svg class="olymp-little-delete"><use xlink:href="/assets/icons/icons.svg#olymp-little-delete"></use></svg>
+						</div>
+					</li>
+
+					<li class="un-read">
+						<div class="author-thumb">
+							<img src="/assets/img/avatar63-sm.jpg" alt="author">
+						</div>
+						<div class="notification-event">
+							<div>You and <a href="#" class="h6 notification-friend">Jahanzaib Ahmad</a> just became friends. Write on <a href="#" class="notification-link">his wall</a>.</div>
+							<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">9 hours ago</time></span>
+						</div>
+										<span class="notification-icon">
+											<svg class="olymp-happy-face-icon"><use xlink:href="/assets/icons/icons.svg#olymp-happy-face-icon"></use></svg>
+										</span>
+
+						<div class="more">
+							<svg class="olymp-three-dots-icon"><use xlink:href="/assets/icons/icons.svg#olymp-three-dots-icon"></use></svg>
+							<svg class="olymp-little-delete"><use xlink:href="/assets/icons/icons.svg#olymp-little-delete"></use></svg>
+						</div>
+					</li>
+
+					<li class="with-comment-photo">
+						<div class="author-thumb">
+							<img src="/assets/img/avatar64-sm.jpg" alt="author">
+						</div>
+						<div class="notification-event">
+							<div><a href="#" class="h6 notification-friend">Huma Khan</a> commented on your <a href="#" class="notification-link">photo</a>.</div>
+							<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">Yesterday at 5:32am</time></span>
+						</div>
+										<span class="notification-icon">
+											<svg class="olymp-comments-post-icon"><use xlink:href="/assets/icons/icons.svg#olymp-comments-post-icon"></use></svg>
+										</span>
+
+						<div class="comment-photo">
+							<img src="/assets/img/comment-photo1.jpg" alt="photo">
+							<span>“She looks incredible in that outfit! We should see each...”</span>
+						</div>
+
+						<div class="more">
+							<svg class="olymp-three-dots-icon"><use xlink:href="/assets/icons/icons.svg#olymp-three-dots-icon"></use></svg>
+							<svg class="olymp-little-delete"><use xlink:href="/assets/icons/icons.svg#olymp-little-delete"></use></svg>
+						</div>
+					</li>
+
+					<li>
+						<div class="author-thumb">
+							<img src="/assets/img/avatar65-sm.jpg" alt="author">
+						</div>
+						<div class="notification-event">
+							<div><a href="#" class="h6 notification-friend">Rock Band</a> invited you to attend to his event Goo in <a href="#" class="notification-link">Gotham Bar</a>.</div>
+							<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">March 5th at 6:43pm</time></span>
+						</div>
+										<span class="notification-icon">
+											<svg class="olymp-happy-face-icon"><use xlink:href="/assets/icons/icons.svg#olymp-happy-face-icon"></use></svg>
+										</span>
+
+						<div class="more">
+							<svg class="olymp-three-dots-icon"><use xlink:href="/assets/icons/icons.svg#olymp-three-dots-icon"></use></svg>
+							<svg class="olymp-little-delete"><use xlink:href="/assets/icons/icons.svg#olymp-little-delete"></use></svg>
+						</div>
+					</li>
+
+					<li>
+						<div class="author-thumb">
+							<img src="/assets/img/avatar66-sm.jpg" alt="author">
+						</div>
+						<div class="notification-event">
+							<div><a href="#" class="h6 notification-friend">Ahmad Nouman</a> commented on your new <a href="#" class="notification-link">profile status</a>.</div>
+							<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">March 2nd at 8:29pm</time></span>
+						</div>
+										<span class="notification-icon">
+											<svg class="olymp-heart-icon"><use xlink:href="/assets/icons/icons.svg#olymp-heart-icon"></use></svg>
+										</span>
+
+						<div class="more">
+							<svg class="olymp-three-dots-icon"><use xlink:href="/assets/icons/icons.svg#olymp-three-dots-icon"></use></svg>
+							<svg class="olymp-little-delete"><use xlink:href="/assets/icons/icons.svg#olymp-little-delete"></use></svg>
+						</div>
+					</li>
+				</ul>
+
+				<a [routerLink]="['/account/profile/notifications']" class="view-all bg-primary">View All Notifications</a>
 			</div>
 
 		</div>
