--- a/src/app/modules/full-layout/modules/account/pages/account-education/account-education.page.html
+++ b/src/app/modules/full-layout/modules/account/pages/account-education/account-education.page.html
@@ -38,14 +38,6 @@
 									<span>Add Education Field</span>
 								</a>
 							</div>
-
-							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-								<button class="btn btn-secondary btn-lg full-width">Cancel</button>
-							</div>
-
-							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-								<button class="btn btn-primary btn-lg full-width">Save all Changes</button>
-							</div>
 						</div>
 
 					</form>
@@ -54,7 +46,7 @@
 
 			<div class="ui-block">
 				<div class="ui-block-title">
-					<h6 class="title">Your Employement History</h6>
+					<h6 class="title">Your Employment History</h6>
 				</div>
 				<div class="ui-block-content">
 					<form>
@@ -95,7 +87,7 @@
 							</div>
 
 							<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-								<button class="btn btn-primary btn-lg full-width">Save all Changes</button>
+								<button class="btn btn-primary btn-lg full-width" (click)="updateEducationsAndEmployments()">Save all Changes</button>
 							</div>
 						</div>
 
