--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
 					</a>
 				</li>
 				<li>
-					<a placement="auto" ngbTooltip="MESSENGER">
+					<a placement="auto" ngbTooltip="CHAT">
 						<svg class="olymp-happy-faces-icon left-menu-icon"><use xlink:href="/assets/icons/icons.svg#olymp-happy-faces-icon"></use></svg>
 					</a>
 				</li>
@@ -97,7 +97,7 @@
 				<li>
 					<a>
 						<svg class="olymp-happy-faces-icon left-menu-icon"><use xlink:href="/assets/icons/icons.svg#olymp-happy-faces-icon"></use></svg>
-						<span class="left-menu-title">Messenger</span>
+						<span class="left-menu-title">Chat</span>
 					</a>
 				</li>
 				<li>
@@ -183,8 +183,8 @@
 				</li>
 				<li>
 					<a>
-						<svg class="olymp-happy-faces-icon left-menu-icon" placement="auto" ngbTooltip="MESSENGER"><use xlink:href="/assets/icons/icons.svg#olymp-happy-faces-icon"></use></svg>
-						<span class="left-menu-title">Messenger</span>
+						<svg class="olymp-happy-faces-icon left-menu-icon" placement="auto" ngbTooltip="CHAT"><use xlink:href="/assets/icons/icons.svg#olymp-happy-faces-icon"></use></svg>
+						<span class="left-menu-title">Chat</span>
 					</a>
 				</li>
 				<li>
