--- a/src/app/modules/full-layout/modules/profile/pages/about/about.page.html
+++ b/src/app/modules/full-layout/modules/profile/pages/about/about.page.html
@@ -12,21 +12,20 @@
 							<ul class="widget w-personal-info item-block">
 								<li>
 									<span class="title">Hobbies:</span>
-							<span class="text">I like to ride the bike to work, swimming, and working out. I also like
-								reading design magazines, go to museums, and binge watching a good tv show while it’s raining outside.
+							<span class="text">{{this.hobbiesAndInterests.hobbies}}
 							</span>
 								</li>
 								<li>
 									<span class="title">Favourite TV Shows:</span>
-									<span class="text">Breaking Good, RedDevil, People of Interest, The Running Dead, Found,  American Guy.</span>
+									<span class="text">{{this.hobbiesAndInterests.favTV}}</span>
 								</li>
 								<li>
 									<span class="title">Favourite Movies:</span>
-									<span class="text">Idiocratic, The Scarred Wizard and the Fire Crown,  Crime Squad, Ferrum Man. </span>
+									<span class="text">{{this.hobbiesAndInterests.favMovies}} </span>
 								</li>
 								<li>
 									<span class="title">Favourite Games:</span>
-									<span class="text">The First of Us, Assassin’s Squad, Dark Assylum, NMAK16, Last Cause 4, Grand Snatch Auto. </span>
+									<span class="text">{{this.hobbiesAndInterests.favGames}} </span>
 								</li>
 							</ul>
 						</div>
@@ -34,19 +33,19 @@
 							<ul class="widget w-personal-info item-block">
 								<li>
 									<span class="title">Favourite Music Bands / Artists:</span>
-									<span class="text">Iron Maid, DC/AC, Megablow, The Ill, Kung Fighters, System of a Revenge.</span>
+									<span class="text">{{this.hobbiesAndInterests.favMusic}}</span>
 								</li>
 								<li>
 									<span class="title">Favourite Books:</span>
-									<span class="text">The Crime of the Century, Egiptian Mythology 101, The Scarred Wizard, Lord of the Wings, Amongst Gods, The Oracle, A Tale of Air and Water.</span>
+									<span class="text">{{this.hobbiesAndInterests.favBooks}}</span>
 								</li>
 								<li>
 									<span class="title">Favourite Writers:</span>
-									<span class="text">Martin T. Georgeston, Jhonathan R. Token, Ivana Rowle, Alexandria Platt, Marcus Roth. </span>
+									<span class="text">{{this.hobbiesAndInterests.favWriters}} </span>
 								</li>
 								<li>
 									<span class="title">Other Interests:</span>
-									<span class="text">Swimming, Surfing, Scuba Diving, Anime, Photography, Tattoos, Street Art.</span>
+									<span class="text">{{this.hobbiesAndInterests.otherInterests}}</span>
 								</li>
 							</ul>
 						</div>
@@ -112,25 +111,24 @@
 					<ul class="widget w-personal-info">
 						<li>
 							<span class="title">About Me:</span>
-							<span class="text">Hi, I’m Hassan, I’m 36 and I work as a Digital Designer for the
-								abc Agency in Pier 56
+							<span class="text">{{this.personalInfo.description}}
 							</span>
 						</li>
 						<li>
 							<span class="title">Birthday:</span>
-							<span class="text">December 14th, 1980</span>
+							<span class="text">{{this.personalInfo.birthday.day}}/{{this.personalInfo.birthday.month}}/{{this.personalInfo.birthday.year}}</span>
 						</li>
 						<li>
 							<span class="title">Birthplace:</span>
-							<span class="text">Lahore, Pakistan</span>
+							<span class="text">{{this.personalInfo.birthplace}}</span>
 						</li>
 						<li>
 							<span class="title">Lives in:</span>
-							<span class="text">Islamabad, Pakistan</span>
+							<span class="text">{{this.personalInfo.city}}, {{this.personalInfo.country}}</span>
 						</li>
 						<li>
 							<span class="title">Occupation:</span>
-							<span class="text">UI/UX Designer</span>
+							<span class="text">{{this.personalInfo.occupation}}</span>
 						</li>
 						<li>
 							<span class="title">Joined:</span>
@@ -142,7 +140,7 @@
 						</li>
 						<li>
 							<span class="title">Status:</span>
-							<span class="text">Married</span>
+							<span class="text">{{this.personalInfo.status}}</span>
 						</li>
 						<li>
 							<span class="title">Email:</span>
@@ -150,19 +148,19 @@
 						</li>
 						<li>
 							<span class="title">Website:</span>
-							<a href="#" class="text">abc.com</a>
+							<a href="#" class="text">{{this.personalInfo.website}}</a>
 						</li>
 						<li>
 							<span class="title">Phone Number:</span>
-							<span class="text">(+93) 555 - 4369 - 8957</span>
+							<span class="text">{{this.personalInfo.phone}}</span>
 						</li>
 						<li>
-							<span class="title">Religious Belifs:</span>
-							<span class="text">-</span>
+							<span class="title">Religious Beliefs:</span>
+							<span class="text">{{this.personalInfo.religion}}</span>
 						</li>
 						<li>
 							<span class="title">Political Incline:</span>
-							<span class="text">Democrat</span>
+							<span class="text">{{this.personalInfo.politicalincline}}</span>
 						</li>
 					</ul>
 
