--- a/src/app/modules/full-layout/modules/profile/pages/profile/profile.page.html
+++ b/src/app/modules/full-layout/modules/profile/pages/profile/profile.page.html
@@ -1,4 +1,4 @@
 <div class="header-spacer"></div>
 
-<app-profile-header [username]="user.name" [image]="user.image"></app-profile-header>
+<app-profile-header [username]="user.username" [displayName]="displayName"></app-profile-header>
 <router-outlet></router-outlet>
