--- a/src/app/modules/full-layout/modules/profile/components/profile-header/profile-header.component.html
+++ b/src/app/modules/full-layout/modules/profile/components/profile-header/profile-header.component.html
@@ -13,23 +13,23 @@
 							<div class="col-lg-5 col-md-5 ">
 								<ul class="profile-menu">
 									<li>
-										<a [routerLink]="['/profile']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">Timeline</a>
+										<a [routerLink]="['/profile', username]" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">Timeline</a>
 									</li>
 									<li>
-										<a [routerLink]="['/profile/about']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">About</a>
+										<a [routerLink]="['/profile', username, 'about']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">About</a>
 									</li>
 									<li>
-										<a [routerLink]="['/profile/friends']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">Friends</a>
+										<a [routerLink]="['/profile', username, 'friends']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">Friends</a>
 									</li>
 								</ul>
 							</div>
 							<div class="col-lg-5 ml-auto col-md-5">
 								<ul class="profile-menu">
 									<li>
-										<a [routerLink]="['/profile/photos']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">Photos</a>
+										<a [routerLink]="['/profile', username, 'photos']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">Photos</a>
 									</li>
 									<li>
-										<a [routerLink]="['/profile/videos']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">Videos</a>
+										<a [routerLink]="['/profile', username, 'videos']" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">Videos</a>
 									</li>
 									<li>
 										<div class="more">
@@ -49,15 +49,15 @@
 						</div>
 
 						<div class="control-block-button">
-							<a href="#" class="btn btn-control bg-blue">
+							<a class="btn btn-control bg-blue" *ngIf="!this.showProfileControls && this.showFriendRequestControls" (click)="sendFriendRequest()">
 								<svg class="olymp-happy-face-icon"><use xlink:href="/assets/icons/icons.svg#olymp-happy-face-icon"></use></svg>
 							</a>
 
-							<a href="#" class="btn btn-control bg-purple">
+							<a href="#" class="btn btn-control bg-purple" *ngIf="!this.showProfileControls">
 								<svg class="olymp-chat---messages-icon"><use xlink:href="/assets/icons/icons.svg#olymp-chat---messages-icon"></use></svg>
 							</a>
 
-							<div class="btn btn-control bg-primary more">
+							<div class="btn btn-control bg-primary more" *ngIf="this.showProfileControls">
 								<svg class="olymp-settings-icon"><use xlink:href="/assets/icons/icons.svg#olymp-settings-icon"></use></svg>
 
 								<ul class="more-dropdown more-with-triangle triangle-bottom-right">
@@ -79,7 +79,7 @@
 							<img [src]="image" alt="author">
 						</a>
 						<div class="author-content">
-							<a href="#" class="h4 author-name">{{username}}</a>
+							<a href="#" class="h4 author-name">{{displayName}}</a>
 							<div class="country">Islamabad, Pakistan</div>
 						</div>
 					</div>
