--- a/src/app/modules/full-layout/modules/profile/pages/about/about.page.html
+++ b/src/app/modules/full-layout/modules/profile/pages/about/about.page.html
@@ -7,13 +7,12 @@
 					<a href="#" class="more"><svg class="olymp-three-dots-icon"><use xlink:href="icons/icons.svg#olymp-three-dots-icon"></use></svg></a>
 				</div>
 				<div class="ui-block-content">
-					<div class="row">
+					<div class="row" *ngIf="this.hobbiesAndInterests">
 						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 							<ul class="widget w-personal-info item-block">
 								<li>
 									<span class="title">Hobbies:</span>
-							<span class="text">{{this.hobbiesAndInterests.hobbies}}
-							</span>
+                  <span class="text">{{this.hobbiesAndInterests.hobbies}}</span>
 								</li>
 								<li>
 									<span class="title">Favourite TV Shows:</span>
@@ -59,41 +58,21 @@
 				</div>
 				<div class="ui-block-content">
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" *ngIf="this.educations">
 							<ul class="widget w-personal-info item-block">
-								<li>
-									<span class="title">The New College of Design</span>
-									<span class="date">2001 - 2006</span>
-									<span class="text">Breaking Good, RedDevil, People of Interest, The Running Dead, Found,  American Guy.</span>
-								</li>
-								<li>
-									<span class="title">Remrad Institute</span>
-									<span class="date">2008</span>
-									<span class="text">Five months Digital Illustration course. Professor: Ahmad Ali.</span>
-								</li>
-								<li>
-									<span class="title">The Digital College </span>
-									<span class="date">2010</span>
-									<span class="text">6 months intensive Motion Graphics course. After Effects and Premire. Professor: Naeem Rehman. </span>
+								<li *ngFor="let edu of this.educations">
+									<span class="title">{{edu.title}}</span>
+									<span class="date">{{edu.time}}</span>
+									<span class="text">{{edu.description}}</span>
 								</li>
 							</ul>
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" *ngIf="this.employments">
 							<ul class="widget w-personal-info item-block">
-								<li>
-									<span class="title">Digital Design Intern</span>
-									<span class="date">2006-2008</span>
-									<span class="text">Digital Design Intern for the “xyz” agency. Was in charge of the communication with the clients.</span>
-								</li>
-								<li>
-									<span class="title">UI/UX Designer</span>
-									<span class="date">2008-2013</span>
-									<span class="text">UI/UX Designer for the abc agency. </span>
-								</li>
-								<li>
-									<span class="title">Senior UI/UX Designer</span>
-									<span class="date">2013-Now</span>
-									<span class="text">Senior UI/UX Designer for the “abc” agency. I’m in charge of a ten person group, overseeing all the proyects and talking to potential clients.</span>
+								<li *ngFor="let emp of this.employments">
+									<span class="title">{{emp.title}}</span>
+									<span class="date">{{emp.time}}</span>
+									<span class="text">{{emp.description}}</span>
 								</li>
 							</ul>
 						</div>
@@ -108,7 +87,7 @@
 					<a href="#" class="more"><svg class="olymp-three-dots-icon"><use xlink:href="icons/icons.svg#olymp-three-dots-icon"></use></svg></a>
 				</div>
 				<div class="ui-block-content">
-					<ul class="widget w-personal-info">
+					<ul class="widget w-personal-info" *ngIf="this.personalInfo">
 						<li>
 							<span class="title">About Me:</span>
 							<span class="text">{{this.personalInfo.description}}
@@ -116,7 +95,7 @@
 						</li>
 						<li>
 							<span class="title">Birthday:</span>
-							<span class="text">{{this.personalInfo.birthday.day}}/{{this.personalInfo.birthday.month}}/{{this.personalInfo.birthday.year}}</span>
+							<span class="text" *ngIf="this.personalInfo.birthday">{{this.personalInfo.birthday.day}}/{{this.personalInfo.birthday.month}}/{{this.personalInfo.birthday.year}}</span>
 						</li>
 						<li>
 							<span class="title">Birthplace:</span>
@@ -132,19 +111,15 @@
 						</li>
 						<li>
 							<span class="title">Joined:</span>
-							<span class="text">April 31st, 2014</span>
+							<span class="text" *ngIf="this.userData">{{this.userData.joinedAt}}</span>
 						</li>
 						<li>
 							<span class="title">Gender:</span>
-							<span class="text">Male</span>
+							<span class="text" *ngIf="this.userData">{{this.userData.gender}}</span>
 						</li>
 						<li>
 							<span class="title">Status:</span>
 							<span class="text">{{this.personalInfo.status}}</span>
-						</li>
-						<li>
-							<span class="title">Email:</span>
-							<a href="#" class="text">abc@yourmail.com</a>
 						</li>
 						<li>
 							<span class="title">Website:</span>
