--- a/src/app/modules/full-layout/modules/circle/components/circle-header/circle-header.component.html
+++ b/src/app/modules/full-layout/modules/circle/components/circle-header/circle-header.component.html
@@ -6,10 +6,19 @@
 		<div class="row">
 			<div class="col-lg-8 m-auto col-md-8 col-sm-12 col-xs-12">
 				<div class="main-header-content">
-					<h1>Welcome to the Forums!</h1>
-					<p>Here in the forums you’ll be able to easily create and manage categories and topics to share with the community!
-						We included some of the most used topics, like music, comics, movies, and community, each one with a cool
-						and customizable illustration so you can have fun with them!
+					<h1>Welcome to Circles!</h1>
+					<p>
+						Circles is the place where you can reach out to your community, 
+						connect and talk about subjects, host live seminars, have a live in studio 
+						concert for your fans, teach a how-to class, have a business meeting. 
+						The possibilities are endless and it’s all interactive! Not only can you live 
+						comments and questions through the chat but circle participants can have two 
+						way open conversations!
+					</p>
+
+					<p>
+						So, create your first circle, invite people to join it and start sharing your 
+						thoughts and ideas
 					</p>
 				</div>
 			</div>
