--- a/src/app/modules/full-layout/modules/home/pages/news-feed/news-feed.page.html
+++ b/src/app/modules/full-layout/modules/home/pages/news-feed/news-feed.page.html
@@ -90,7 +90,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link inline-items" data-toggle="tab" href="#quick-post" role="tab" aria-expanded="false">
+							<a class="nav-link inline-items" data-toggle="tab" href="#quick-post" role="tab" aria-expanded="false" placement="top" ngbTooltip="Quick post is a post that only lasts 15 minutes and automatically deletes">
 
 								<svg class="olymp-thunder-icon"><use xlink:href="/assets/icons/icons.svg#olymp-thunder-icon"></use></svg>
 
