--- a/src/scss/blocks/_registration-login-form.scss
+++ b/src/scss/blocks/_registration-login-form.scss
@@ -39,8 +39,8 @@
 	border-right: 1px solid $border-color;
 	padding: 25px;
 	color: #c0c4d8;
-	fill: #c0c4d8;
-	background-color: #fafbfd;
+	fill: #4e567e;
+	background-color: #f2f5fa;
 	height: 100%;
 	display: table-cell;
 	vertical-align: middle;
