--- a/src/app/modules/blank-layout/modules/auth/pages/landing/landing.page.html
+++ b/src/app/modules/blank-layout/modules/auth/pages/landing/landing.page.html
@@ -36,12 +36,12 @@
 					<!-- Nav tabs -->
 					<ul class="nav nav-tabs" role="tablist">
 						<li class="nav-item">
-							<a class="nav-link active" data-toggle="tab" href="#home" role="tab" placement="right" ngbTooltip="Login">
+							<a class="nav-link active" data-toggle="tab" href="#login" role="tab" placement="right" ngbTooltip="Login">
 								<svg class="olymp-login-icon"><use xlink:href="/assets/icons/icons.svg#olymp-login-icon"></use></svg>
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" data-toggle="tab" href="#profile" role="tab" placement="right" ngbTooltip="Signup">
+							<a class="nav-link" data-toggle="tab" href="#signup" role="tab" placement="right" ngbTooltip="Signup">
 								<svg class="olymp-register-icon"><use xlink:href="/assets/icons/icons.svg#olymp-register-icon"></use></svg>
 							</a>
 						</li>
@@ -49,7 +49,7 @@
 
 					<!-- Tab panes -->
 					<div class="tab-content">
-						<div class="tab-pane active" id="home" role="tabpanel" data-mh="log-tab">
+						<div class="tab-pane active" id="signup" role="tabpanel" data-mh="log-tab">
 							<div class="title h6">Register to YelloPlane</div>
 							<form class="content" [formGroup]="registerForm" (ngSubmit)="tryRegister(registerForm.value)">
 								<div class="row">
@@ -162,7 +162,7 @@
 							</form>
 						</div>
 
-						<div class="tab-pane" id="profile" role="tabpanel" data-mh="log-tab">
+						<div class="tab-pane" id="login" role="tabpanel" data-mh="log-tab">
 							<div class="title h6">Login to your Account</div>
 							<form class="content" [formGroup]="loginForm" (ngSubmit)="tryLogin(loginForm.value)">
 								<div class="row">
