--- a/src/scss/blocks/_forms.scss
+++ b/src/scss/blocks/_forms.scss
@@ -575,7 +575,7 @@ fieldset[disabled] .form-group.is-focused .checkbox label {
   display: inline-block;
   width: 20px;
   height: 20px;
-  border: 1px solid $border-color;
+  border: 1px solid #c4d2e7;
   overflow: hidden;
   z-index: 1;
 }
